# auturbo_aucar

./: README.md
aucar_aucar_controller/rosserial/: .cproject  .mxproject  .project  README.md  rosserial.elf.launch  rosserial.ioc
aucar_aucar_controller/rosserial/Inc/: STM32Hardware.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
aucar_aucar_controller/rosserial/Inc/ROS/roscpp_tutorials/: ThreeInts.h
aucar_aucar_controller/rosserial/Src/: dma.c  main.cpp  stm32f4xx_it.c  tim.c  usart.c
aucar_description/: CMakeLists.txt  package.xml
aucar_description/launch/: aucar_rviz.launch
aucar_description/mesh/: Scanning LiDAR.stp  sweep.stl
aucar_description/rviz/: aucar.rviz
aucar_description/urdf/: aucar.gazebo.xacro  aucar.urdf.xacro
aucar_gazebo/: CMakeLists.txt  package.xml
aucar_gazebo/include/: Untitled-2.hpp  aucar_drive.hpp
aucar_gazebo/launch/: aucar_gazebo.launch
aucar_gazebo/msg/: MessageData.msg
aucar_gazebo/src/: Untitled-1.cpp  Untitled-2.cpp  aucar_drive.cpp
aucar_motor_driver/: CMakeLists.txt  package.xml
aucar_motor_driver/config/: aucar_motor_driver.yaml
aucar_motor_driver/include/aucar_motor_driver/: aucar.h  test.h
aucar_motor_driver/src/: aucar.cpp  test.cpp
