<?xml version="1.0"?>
<package format="2">
  <name>aucar_description</name>
  <version>0.0.0</version>
  <description>aucar_description package</description>
  <maintainer email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.facebook.com/AuTURBO</url>
  <url type="repository">https://github.com/AuTURBO</url>
  <author email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</author>
  <author email="jeongam5785@gmail.com">Jeongam Seo</author>
  <author>Youngjun Kim</author>
  <author email="rlaqhrud852@gmail.com">Ashe</author>
  <author>Sangwook Kim</author>
  <author>Hyunsoo Seon</author>
  <author>Seongwoon Kang</author>
  <author>Hyunsoo Shin</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export></export>
</package>
