<?xml version="1.0"?>
<package format="2">
  <name>aucar_motor_driver</name>
  <version>0.0.0</version>
  <description>The aucar_motor_driver package</description>
  <maintainer email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.facebook.com/AuTURBO</url>
  <url type="repository">https://github.com/AuTURBO</url>
  <author email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</author>
  <author email="jeongam5785@gmail.com">Jeongam Seo</author>
  <author>Youngjun Kim</author>
  <author email="rlaqhrud852@gmail.com">Ashe</author>
  <author>Sangwook Kim</author>
  <author>Hyunsoo Seon</author>
  <author>Seongwoon Kang</author>
  <author>Hyunsoo Shin</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aucar_description</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>aucar_description</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>aucar_description</exec_depend>
  <export></export>
</package>
